Intermittent build dependent TEST-UNEXPECTED-PASS | /html/canvas/element/path-objects/2d.path.isPointInStroke.scaleddashes.html | isPointInStroke() should return correct results on dashed paths at high scale factors
Categories
(Core :: Graphics: Canvas2D, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| thunderbird_esr78 | --- | unaffected |
| firefox-esr78 | --- | unaffected |
| firefox84 | --- | unaffected |
| firefox85 | --- | wontfix |
| firefox86 | + | verified |
People
(Reporter: ccoroiu, Assigned: bobowen)
References
(Regression)
Details
(Keywords: intermittent-failure, regression, Whiteboard: [stockwell unknown])
Attachments
(1 file, 1 obsolete file)
[Tracking Requested - why for this release]:
Central as beta simulation:
https://treeherder.mozilla.org/jobs?repo=try&revision=f14079f1ea3d243506b87f44b3b2b318c657404d&searchStr=windows%2C10%2Cx64%2Cshippable%2Copt%2Cweb%2Cplatform%2Ctests%2Ctest-windows10-64-shippable%2Fopt-web-platform-tests-e10s%2Cwpt6
Failure log: https://treeherder.mozilla.org/logviewer?job_id=325309665&repo=try&lineNumber=7157
Comment 1•4 years ago
|
||
Updated•4 years ago
|
Comment 2•4 years ago
•
|
||
This is unexpected pass in late beta on win devedition and shippable opt: https://treeherder.mozilla.org/jobs?repo=try&group_state=expanded&revision=f14079f1ea3d243506b87f44b3b2b318c657404d&searchStr=wpt&selectedTaskRun=ZWZyH8yNQuaVfTRHQf89XQ.0
Comment 3•4 years ago
|
||
Similar to bug 1663703. Lee, please take a look in the new year.
Updated•4 years ago
|
Updated•4 years ago
|
Updated•4 years ago
|
Updated•4 years ago
|
Comment 4•4 years ago
|
||
Changing the priority to p2 as the bug is tracked by a release manager for the current nightly.
See What Do You Triage for more information
| Comment hidden (Intermittent Failures Robot) |
Comment 6•4 years ago
|
||
This already fails for 85 late betas (8/8 on Windows 10 x64 Shippable).
Comment 7•4 years ago
|
||
Bob, does this look like something that was essentially fixed by bug 1663703, and for which we should just remove the meta file?
| Assignee | ||
Comment 8•4 years ago
|
||
(In reply to Lee Salzman [:lsalzman] from comment #7)
Bob, does this look like something that was essentially fixed by bug 1663703, and for which we should just remove the meta file?
I thought so, which is why it fell off my radar before Christmas, but actually, this seems to be broken with remote canvas enabled and working with it disabled.
The patch from bug 1663703, doesn't affect it, so I think this requires a bit more investigation.
| Assignee | ||
Comment 9•4 years ago
|
||
Looks like this might have been fixed on chromium by (where the test was added):
https://chromium-review.googlesource.com/c/chromium/src/+/2112955
I think that this is the important bit for us [1].
Certainly if I change [2] to the following it seems to fix it:
float strokePrecision = sqrtf(std::max(
(aTransform._11 * aTransform._11) + (aTransform._12 * aTransform._12),
(aTransform._21 * aTransform._21) + (aTransform._22 * aTransform._22)));
SkPath strokePath;
paint.getFillPath(mPath, &strokePath, nullptr, strokePrecision);
lsalzman - what do you think?
[1] https://source.chromium.org/chromium/chromium/src/+/master:third_party/blink/renderer/platform/graphics/path.cc;l=87-98;drc=7ccffaf0933ccc647c744bf66971bcf5f33a676a
[2] https://searchfox.org/mozilla-central/rev/07342ce09126c513540c1c343476e026cfa907bf/gfx/2d/PathSkia.cpp#141-142
Comment 10•4 years ago
|
||
This uses SkDraw::ComputeResScaleForStroking to ensure we exactly match the resolution scale
that is chosen for drawing the stroked path inside the guts of Skia. This should ensure these
two don't get out of sync.
Comment 11•4 years ago
|
||
Comment 12•4 years ago
|
||
| bugherder | ||
Updated•4 years ago
|
Comment 13•4 years ago
|
||
Verified fixed in yesterday's central-as-late-beta simulation:
https://treeherder.mozilla.org/jobs?repo=try&group_state=expanded&revision=33b94237dfcfd44fde50c399b384ac8b7b13f8b6&test_paths=html%2Fcanvas%2Felemen&searchStr=Windows%2C10%2Cx64%2CShippable&selectedTaskRun=VpemmkvWSNmRRmTVSgovLQ.0
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
Updated•4 years ago
|
Description
•